tests/rosetta/transpiler/Zig/bitcoin-address-validation.error
zig build: exit status 1
/tmp/bitcoin-address-validation.zig:71:19: error: use of undeclared identifier 'sha256'
